// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Motif test suite should generate createMotif based on chord 1`] = `
[
  {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 240,
    "note": "E3",
    "time": 0,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 720,
    "note": "Ab3",
    "time": 240,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 70,
    "next": 1200,
    "note": "Bb3",
    "time": 720,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 1440,
    "note": "E3",
    "time": 1200,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 68,
    "next": 1760,
    "note": "Ab3",
    "time": 1440,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 64,
    "next": 1920,
    "note": "E3",
    "time": 1760,
  },
]
`;

exports[`A Motif test suite should generate createMotif based on chord 2`] = `
[
  {
    "dur": 240,
    "isRest": false,
    "midi": 61,
    "next": 240,
    "note": "Db3",
    "time": 0,
  },
  {
    "dur": 720,
    "isRest": false,
    "midi": 68,
    "next": 960,
    "note": "Ab3",
    "time": 240,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 1440,
    "note": "Ab3",
    "time": 960,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 70,
    "next": 1680,
    "note": "Bb3",
    "time": 1440,
  },
  {
    "dur": 720,
    "isRest": false,
    "midi": 68,
    "next": 2400,
    "note": "Ab3",
    "time": 1680,
  },
  {
    "dur": 720,
    "isRest": false,
    "midi": 64,
    "next": 3120,
    "note": "E3",
    "time": 2400,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 3360,
    "note": "E3",
    "time": 3120,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 3600,
    "note": "Ab3",
    "time": 3360,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 3840,
    "note": "E3",
    "time": 3600,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 1`] = `
[
  {
    "dur": 240,
    "isRest": false,
    "midi": 74,
    "next": 240,
    "note": "D4",
    "time": 0,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 74,
    "next": 720,
    "note": "D4",
    "time": 240,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 80,
    "next": 1200,
    "note": "G#4",
    "time": 720,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 71,
    "next": 1440,
    "note": "B3",
    "time": 1200,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 74,
    "next": 1760,
    "note": "D4",
    "time": 1440,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 73,
    "next": 1920,
    "note": "C#4",
    "time": 1760,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 2`] = `
[
  {
    "dur": 240,
    "isRest": false,
    "midi": 69,
    "next": 240,
    "note": "A3",
    "time": 0,
  },
  {
    "dur": 720,
    "isRest": false,
    "midi": 74,
    "next": 960,
    "note": "D4",
    "time": 240,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 74,
    "next": 1440,
    "note": "D4",
    "time": 960,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 78,
    "next": 1680,
    "note": "F#4",
    "time": 1440,
  },
  {
    "dur": 720,
    "isRest": false,
    "midi": 78,
    "next": 2400,
    "note": "F#4",
    "time": 1680,
  },
  {
    "dur": 720,
    "isRest": false,
    "midi": 73,
    "next": 3120,
    "note": "C#4",
    "time": 2400,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 3360,
    "note": "C#4",
    "time": 3120,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 78,
    "next": 3600,
    "note": "F#4",
    "time": 3360,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 3840,
    "note": "C#4",
    "time": 3600,
  },
]
`;

exports[`A Motif test suite should generate motif with given durations 1`] = `
[
  {
    "dur": 480,
    "isRest": false,
    "midi": 74,
    "next": 480,
    "note": "D4",
    "time": 0,
  },
  {
    "dur": 960,
    "isRest": false,
    "midi": 69,
    "next": 1440,
    "note": "A3",
    "time": 480,
  },
  {
    "dur": 360,
    "isRest": false,
    "midi": 71,
    "next": 1800,
    "note": "B3",
    "time": 1440,
  },
]
`;

exports[`A Motif test suite should generate motif with rests 1`] = `
[
  {
    "dur": 160,
    "isRest": true,
    "midi": -1,
    "next": 160,
    "note": "",
    "time": 0,
  },
  {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 480,
    "note": "E4",
    "time": 160,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 73,
    "next": 640,
    "note": "C#4",
    "time": 480,
  },
  {
    "dur": 320,
    "isRest": true,
    "midi": -1,
    "next": 960,
    "note": "",
    "time": 640,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 78,
    "next": 1440,
    "note": "F#4",
    "time": 960,
  },
  {
    "dur": 160,
    "isRest": false,
    "midi": 73,
    "next": 1600,
    "note": "C#4",
    "time": 1440,
  },
  {
    "dur": 80,
    "isRest": true,
    "midi": -1,
    "next": 1680,
    "note": "",
    "time": 1600,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 2160,
    "note": "C#4",
    "time": 1680,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 1`] = `
[
  {
    "dur": 720,
    "isRest": false,
    "midi": 68,
    "next": 1200,
    "note": "Ab3",
    "time": 480,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 1680,
    "note": "Ab3",
    "time": 1200,
  },
  {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 1920,
    "note": "Ab3",
    "time": 1680,
  },
]
`;
